[gd_scene load_steps=4 format=3 uid="uid://dbqckdnjehchj"]

[ext_resource type="Script" uid="uid://dd6kxguoh0lwl" path="res://scenes/end_screen.gd" id="1_r65uo"]
[ext_resource type="Theme" uid="uid://dgly0ah5t47l8" path="res://common/style/terminal.tres" id="1_td7sf"]
[ext_resource type="AudioStream" uid="uid://2mr72kvhf27k" path="res://common/assets/chilltown.wav" id="3_jc7ji"]

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_r65uo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThankYou" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_td7sf")
theme_override_font_sizes/normal_font_size = 64
fit_content = true
autowrap_mode = 0

[node name="AppearText" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_td7sf")
theme_override_font_sizes/normal_font_size = 64
text = "   "
fit_content = true
autowrap_mode = 0

[node name="Title" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_td7sf")
theme_override_font_sizes/font_size = 32
text = "title"

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_jc7ji")

[connection signal="pressed" from="Control/VBoxContainer/Title" to="." method="_on_title_pressed"]
